force-app/main/default/objects/Opportunity/fields/Deal_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Loan_Number__c</fullName>
    <description>This will replace the manual auto assignment</description>
    <displayFormat>{00000}</displayFormat>
    <label>Deal Loan Number</label>
    <type>AutoNumber</type>
</CustomField>