force-app/main/default/objects/Opportunity/fields/Deal_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deal_Lost_Reason__c</fullName>
    <description>When a deal is marked as Lost (Cancelled, Withdrawn, or Rejected).  A lost reason is needed.</description>
    <inlineHelpText>Select a Deal Lost/Hold Reason, if a deal is moved to UW Hold, Withdrawn, or Rejected.</inlineHelpText>
    <label>Deal Lost/Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Background</fullName>
            </value>
            <value>
                <fullName>Borrower does not like terms</fullName>
            </value>
            <value>
                <fullName>Borrower does not meet requirements</fullName>
            </value>
            <value>
                <fullName>Borrower Requested</fullName>
            </value>
            <value>
                <fullName>Borrower Unresponsive</fullName>
            </value>
            <value>
                <fullName>Broker Requested</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>Cost Too High</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Does not meet occupancy</fullName>
            </value>
            <value>
                <fullName>Economic Downturn</fullName>
            </value>
            <value>
                <fullName>Existing Rate Lower</fullName>
            </value>
            <value>
                <fullName>Failed to Close</fullName>
            </value>
            <value>
                <fullName>Failed to Qualify</fullName>
            </value>
            <value>
                <fullName>In Process of Withdrawal/Rejection</fullName>
            </value>
            <value>
                <fullName>Insufficient Income</fullName>
            </value>
            <value>
                <fullName>Insufficient Track Record Experience</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Money Laundering</fullName>
            </value>
            <value>
                <fullName>Other – See Deal Notes</fullName>
            </value>
            <value>
                <fullName>Pending Financial Documents/Tax Returns</fullName>
            </value>
            <value>
                <fullName>Pending Property Rehab</fullName>
            </value>
            <value>
                <fullName>Pending Rehab</fullName>
            </value>
            <value>
                <fullName>Portfolio Leveraged</fullName>
            </value>
            <value>
                <fullName>Prior to Reason Requirement</fullName>
            </value>
            <value>
                <fullName>Property List Not Finalized</fullName>
            </value>
            <value>
                <fullName>Split Up Deal</fullName>
            </value>
            <value>
                <fullName>Terms Not Accepted</fullName>
            </value>
            <value>
                <fullName>Won through another broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>