force-app/main/default/objects/Opportunity/fields/Deferred_Equity__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Equity__c</fullName>
    <label>Deferred Equity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>