force-app/main/default/objects/Opportunity/fields/Delinquent_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_30_Days__c</fullName>
    <description>Term Loan: Number times payment received on 30th thru 59th day past due date life-to-date</description>
    <inlineHelpText>Term Loan: Number times payment received on 30th thru 59th day past due date life-to-date</inlineHelpText>
    <label>Delinquent 30 Days +</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>