force-app/main/default/objects/Opportunity/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <description>Removed Deposit_Insurance_Review__c per request by ML on 2/27/2018</description>
    <formula>Deposit_Broker_Price_Opinions_Appraisal__c + Deposit_Legal_Counsel_Diligence__c +  Deposit_Lender_Out_of_Pocket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>