force-app/main/default/objects/Opportunity/fields/Deposit_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Requested__c</fullName>
    <description>This will be reflected on the Term Sheet</description>
    <inlineHelpText>This will be reflected on the Term Sheet</inlineHelpText>
    <label>Deposit Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>