force-app/main/default/objects/Opportunity/fields/Deposit_Broker_Price_Opinions_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Broker_Price_Opinions_Appraisal__c</fullName>
    <label>Deposit -Broker Price Opinions/Appraisal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>