force-app/main/default/objects/Opportunity/fields/Deposit_Collected__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Collected__c</fullName>
    <label>Deposit Collected Date</label>
    <type>Date</type>
</CustomField>