force-app/main/default/objects/Opportunity/fields/Deposit_Fed_Reference__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Fed_Reference__c</fullName>
    <label>Deposit Fed Reference #</label>
    <length>35</length>
    <type>Text</type>
</CustomField>