force-app/main/default/objects/Opportunity/fields/Deposit_Insurance_Review__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Insurance_Review__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deposit - Insurance Review</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>