force-app/main/default/objects/Opportunity/fields/Deposit_Legal_Counsel_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Legal_Counsel_Diligence__c</fullName>
    <label>Deposit - Legal Counsel, Diligence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>