force-app/main/default/objects/Opportunity/fields/Deposit_Lender_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Lender_Out_of_Pocket__c</fullName>
    <label>Deposit - Lender Diligence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>