force-app/main/default/objects/Opportunity/fields/Deposit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Notes__c</fullName>
    <label>Deposit Notes</label>
    <type>TextArea</type>
</CustomField>