force-app/main/default/objects/Opportunity/fields/Deposit_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Remaining__c</fullName>
    <description>Bridge Use</description>
    <formula>Deposit_Amount__c - ( Legal_Fee__c + Entity_Search_Fee__c + Calculated_Origination_Fee__c + UCC_1_Filing_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>