force-app/main/default/objects/Opportunity/fields/Discount_Fee__c.field-meta.xml
<CustomField>
    <fullName>Discount_Fee__c</fullName>
    <label>Discount Fee %</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Term_Loan_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1 pt rate buy down / -25 BPS</fullName>
            </value>
            <value>
                <fullName>2 pt rate buy down / -50 BPS</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>