force-app/main/default/objects/Opportunity/fields/Discount_Fee_Formula__c.field-meta.xml
<CustomField>
    <fullName>Discount_Fee_Formula__c</fullName>
    <formula>IF(
  ISBLANK(TEXT( Discount_Fee__c )),
  0,
  IF(
    ISPICKVAL(Discount_Fee__c, &apos;1 pt rate buy down / -25 BPS&apos;),
    (0.01*(Final_Loan_Amount__c)),
    (0.02*(Final_Loan_Amount__c))
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>