force-app/main/default/objects/Opportunity/fields/Distinct_Counties__c.field-meta.xml
<CustomField>
    <fullName>Distinct_Counties__c</fullName>
    <label>Distinct Counties</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>