force-app/main/default/objects/Opportunity/fields/Distinct_MSAs__c.field-meta.xml
<CustomField>
    <fullName>Distinct_MSAs__c</fullName>
    <description>Roll up of the MSAs from the Properties</description>
    <inlineHelpText>The MSAs from the Properties associated to this Deal</inlineHelpText>
    <label>Distinct MSAs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>