force-app/main/default/objects/Opportunity/fields/Distinct_Property_Types__c.field-meta.xml
<CustomField>
    <fullName>Distinct_Property_Types__c</fullName>
    <label>Distinct Property Types</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>