force-app/main/default/objects/Opportunity/fields/Distinct_States__c.field-meta.xml
<CustomField>
    <fullName>Distinct_States__c</fullName>
    <label>Distinct States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>