force-app/main/default/objects/Opportunity/fields/Distinct_States_Full__c.field-meta.xml
<CustomField>
    <fullName>Distinct_States_Full__c</fullName>
    <label>Distinct States Full</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>