force-app/main/default/objects/Opportunity/fields/Draw_Period__c.field-meta.xml
<CustomField>
    <fullName>Draw_Period__c</fullName>
    <description>Bridge model pricing request field for Draw Period Term,</description>
    <inlineHelpText>Requested Advance Period = &apos;Draw Period&apos; in Pricing Model</inlineHelpText>
    <label>Requested Advance Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOC_Terms</valueSetName>
    </valueSet>
</CustomField>