force-app/main/default/objects/Opportunity/fields/DSCR_Threshold_CashMan__c.field-meta.xml
<CustomField>
    <fullName>DSCR_Threshold_CashMan__c</fullName>
    <description>Debt Service Coverage Ratio Threshold for Enhanced Cash Management</description>
    <inlineHelpText>Debt Service Coverage Ratio Threshold for Enhanced Cash Management.  Reflected in the Term Sheet and Loan Agreement</inlineHelpText>
    <label>DSCR Threshold for Enhanced Cash Mgmt</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cash_Management__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1.05x</fullName>
            </value>
            <value>
                <fullName>1.07x</fullName>
            </value>
            <value>
                <fullName>1.10x</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>