force-app/main/default/objects/Opportunity/fields/Email_Send__c.field-meta.xml
<CustomField>
    <fullName>Email_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Send</label>
    <type>Checkbox</type>
</CustomField>