force-app/main/default/objects/Opportunity/fields/Entity_Search_Fee__c.field-meta.xml
<CustomField>
    <fullName>Entity_Search_Fee__c</fullName>
    <label>Entity Search Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>