force-app/main/default/objects/Opportunity/fields/Estimated_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Credit_Score__c</fullName>
    <description>Single Asset Use</description>
    <label>Estimated Credit Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>740 +</fullName>
            </value>
            <value>
                <fullName>720-739</fullName>
            </value>
            <value>
                <fullName>700-719</fullName>
            </value>
            <value>
                <fullName>680-699</fullName>
            </value>
            <value>
                <fullName>650-679</fullName>
            </value>
            <value>
                <fullName>620-649</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>