force-app/main/default/objects/Opportunity/fields/Estimated_Sponsor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sponsor_Tier__c</fullName>
    <description>Estimated Credit Tier based on credit score, liquidity and number of projects</description>
    <inlineHelpText>Estimated Credit Tier based on credit score, liquidity and number of projects</inlineHelpText>
    <label>Estimated Credit Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>