force-app/main/default/objects/Opportunity/fields/Estimated_Value_Per_Property__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value_Per_Property__c</fullName>
    <formula>IF
  ( AND
    ( NOT(ISBLANK(Total_Borrower_Estimated_Value__c) ),
      NOT(ISBLANK(Total_Properties__c) )
    ), 
    Total_Borrower_Estimated_Value__c / Total_Properties__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Value Per Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>