force-app/main/default/objects/Opportunity/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <description>If Exception is selected, enter a reason</description>
    <label>Exception Reason</label>
    <type>TextArea</type>
</CustomField>