force-app/main/default/objects/Opportunity/fields/Exceptions_Comments_Explanations__c.field-meta.xml
<CustomField>
    <fullName>Exceptions_Comments_Explanations__c</fullName>
    <label>Exceptions Comments/Explanations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>