force-app/main/default/objects/Opportunity/fields/Exit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exit_Fee__c</fullName>
    <description>Bridge Use</description>
    <label>Exit Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>