force-app/main/default/objects/Opportunity/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Bridge Use</description>
    <formula>IF(
 ISBLANK( Modified_Expiration_Date__c ),
 IF(
   Advance_Period__c = 0,
   Current_Line_Maturity_Date__c  
  ,
 Loan_Effective_Date__c +  Advance_Period__c),
Modified_Expiration_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>