force-app/main/default/objects/Opportunity/fields/Expired_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expired_Amount__c</fullName>
    <description>Not Used</description>
    <label>Expired Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>