force-app/main/default/objects/Opportunity/fields/Extension_Fee__c.field-meta.xml
<CustomField>
    <fullName>Extension_Fee__c</fullName>
    <label>Extension Fee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>0.00%</fullName>
            </value>
            <value>
                <fullName>0.25%</fullName>
            </value>
            <value>
                <fullName>0.50%</fullName>
            </value>
            <value>
                <fullName>0.75%</fullName>
            </value>
            <value>
                <fullName>1.00%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>