force-app/main/default/objects/Opportunity/fields/Extension_Modified__c.field-meta.xml
<CustomField>
    <fullName>Extension_Modified__c</fullName>
    <description>Not Used</description>
    <label>Extension/Modified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>