force-app/main/default/objects/Opportunity/fields/Extension_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Extension_Period_Days__c</fullName>
    <label>Extension Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>