force-app/main/default/objects/Opportunity/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <description>Bridge Use</description>
    <inlineHelpText>CAF Retained Fee *Broker Fee is taken out of the Advance Fee*</inlineHelpText>
    <label>Advance Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>