force-app/main/default/objects/Opportunity/fields/Final_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Final_Interest_Rate__c</fullName>
    <label>Final Interest rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>