force-app/main/default/objects/Opportunity/fields/Final_Interest_Rate_Calc__c.field-meta.xml
<CustomField>
    <fullName>Final_Interest_Rate_Calc__c</fullName>
    <description>Sum of the Final Swap Rate and Final Spread</description>
    <formula>Final_Spread__c + Final_Swap__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of the Final Swap Rate and Final Spread</inlineHelpText>
    <label>Final Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>