force-app/main/default/objects/Opportunity/fields/Final_Spread__c.field-meta.xml
<CustomField>
    <fullName>Final_Spread__c</fullName>
    <description>Term Use</description>
    <label>Final Spread</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>