force-app/main/default/objects/Opportunity/fields/Final_Swap__c.field-meta.xml
<CustomField>
    <fullName>Final_Swap__c</fullName>
    <description>Term Use</description>
    <label>Final Swap</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>