force-app/main/default/objects/Opportunity/fields/First_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Due_Date__c</fullName>
    <label>1st Payment Due Date</label>
    <type>Date</type>
</CustomField>