force-app/main/default/objects/Opportunity/fields/Frequency_of_Operating_Statements__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Operating_Statements__c</fullName>
    <label>Frequency of Operating Statements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Quarterly/Reviewed Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly/Audited Annual</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>