force-app/main/default/objects/Opportunity/fields/Full_Draw__c.field-meta.xml
<CustomField>
    <fullName>Full_Draw__c</fullName>
    <description>Full utilization of credit limit</description>
    <inlineHelpText>Full utilization of credit limit</inlineHelpText>
    <label>Full Draw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>