force-app/main/default/objects/Opportunity/fields/Full_Util_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Full_Util_Coverage__c</fullName>
    <label>Full Util Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>