force-app/main/default/objects/Opportunity/fields/Fund_Control_Company__c.field-meta.xml
<CustomField>
    <fullName>Fund_Control_Company__c</fullName>
    <label>Fund Control Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5Arch</fullName>
            </value>
            <value>
                <fullName>CFSI</fullName>
            </value>
            <value>
                <fullName>Granite</fullName>
            </value>
            <value>
                <fullName>Hasz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>