force-app/main/default/objects/Opportunity/fields/Fund_Control_Method__c.field-meta.xml
<CustomField>
    <fullName>Fund_Control_Method__c</fullName>
    <label>Fund Control Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fund Control Paid and Title Endorsement per Draw</fullName>
            </value>
            <value>
                <fullName>Fund Control Paid Per Draw</fullName>
            </value>
            <value>
                <fullName>Title Endorsements Per Draw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>