force-app/main/default/objects/Opportunity/fields/Funding_Method__c.field-meta.xml
<CustomField>
    <fullName>Funding_Method__c</fullName>
    <label>Funding Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Flip Funder</fullName>
            </value>
            <value>
                <fullName>Table Funded</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>