force-app/main/default/objects/Opportunity/fields/Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Status__c</fullName>
    <label>Funding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wet</fullName>
            </value>
            <value>
                <fullName>Dry</fullName>
                <default>true</default>
                <label>Dry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>