force-app/main/default/objects/Opportunity/fields/GLC_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>GLC_Approval_Comments__c</fullName>
    <label>GLC Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>