force-app/main/default/objects/Opportunity/fields/GLC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>GLC_Approval_Date__c</fullName>
    <description>Date that the Green Light Committee approved this Deal</description>
    <inlineHelpText>Date that the Green Light Committee approved this Deal</inlineHelpText>
    <label>GLC Approval Date</label>
    <type>Date</type>
</CustomField>