force-app/main/default/objects/Opportunity/fields/GLC_Approved__c.field-meta.xml
<CustomField>
    <fullName>GLC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approval from GLC obtained
&quot;Green Light Committee&quot;</description>
    <label>GLC Approved</label>
    <type>Checkbox</type>
</CustomField>