force-app/main/default/objects/Opportunity/fields/GLC_Required__c.field-meta.xml
<CustomField>
    <fullName>GLC_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GLC Required</label>
    <type>Checkbox</type>
</CustomField>