force-app/main/default/objects/Opportunity/fields/HD_Code__c.field-meta.xml
<CustomField>
    <fullName>HD_Code__c</fullName>
    <description>Auto generated code for storing and assigning next available HD code to deals that have closed.</description>
    <displayFormat>CV{0000}</displayFormat>
    <label>HD Code</label>
    <type>AutoNumber</type>
</CustomField>