force-app/main/default/objects/Opportunity/fields/HD_Discount_Code_Assigned__c.field-meta.xml
<CustomField>
    <fullName>HD_Discount_Code_Assigned__c</fullName>
    <description>Logic to check if HD Discount Code is already assigned in Account, if so use code.  Else, when Deal Stage = Close Won assign the next available code.</description>
    <formula>IF( Account.Home_Depot__c &lt;&gt; &quot;&quot;, Account.Home_Depot__c, (IF(ISPICKVAL(StageName , &quot;Closed Won&quot;), HD_Code__c , &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HD Discount Code Assigned</label>
    <type>Text</type>
</CustomField>