force-app/main/default/objects/Opportunity/fields/Historical_Ontime_Payments_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Historical_Ontime_Payments_Percentage__c</fullName>
    <description>Formula calculating % of on-time payments:  (Sum of Total Payments made - Sum of Delinquent Payments)/Total # of Expected Payments in %</description>
    <formula>IF(MONTH(Last_Payment_Date__c) &lt; 12,
IF(MONTH(First_Payment_Date__c) = MONTH(Last_Payment_Date__c), 1, 

IF(NOT(ISNULL(Last_Payment_Date__c)), 
((MONTH(Last_Payment_Date__c ) + (12*(YEAR(Last_Payment_Date__c ) - YEAR(First_Payment_Date__c ))) - MONTH(First_Payment_Date__c )) - ( Delinquent_120_Days__c + Delinquent_30_Days__c + Delinquent_60_Days__c + Delinquent_90_Days__c ))

/ IF(MONTH(TODAY()) - MONTH(Last_Payment_Date__c) = 1, 
((MONTH(TODAY()) + (12*(YEAR(TODAY()) - YEAR(First_Payment_Date__c))) - MONTH(First_Payment_Date__c))) - 1,  

((MONTH(TODAY()) + (12*(YEAR(TODAY()) - YEAR(First_Payment_Date__c))) - MONTH(First_Payment_Date__c)))),

0)), 

IF(MONTH(First_Payment_Date__c) = MONTH(Last_Payment_Date__c), 1, 

IF(NOT(ISNULL(Last_Payment_Date__c)), 
((MONTH(Last_Payment_Date__c ) + (12*(YEAR(Last_Payment_Date__c ) - YEAR(First_Payment_Date__c ))) - MONTH(First_Payment_Date__c )) - ( Delinquent_120_Days__c + Delinquent_30_Days__c + Delinquent_60_Days__c + Delinquent_90_Days__c ))

/ IF(MONTH(TODAY()) - MONTH(Last_Payment_Date__c) = 1, 
((MONTH(TODAY()) + (12*(YEAR(TODAY()) - YEAR(First_Payment_Date__c))) - MONTH(First_Payment_Date__c))) - 1,  

((MONTH(TODAY()) + (12*(YEAR(TODAY()) - YEAR(First_Payment_Date__c))) - MONTH(First_Payment_Date__c)))),

0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula calculating % of on-time payments:  (Sum of Total Payments made - Sum of Delinquent Payments)/Total # of Expected Payments in %</inlineHelpText>
    <label>Historical Ontime Payments Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>